# Web_HW_8

./: pyproject.toml
first_part/: queryes.py  seed.py
second_part/: consumer_email.py  consumer_sms.py  producer.py
second_part/database/: models.py  seed.py  users.json
