[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["YevhenKoss <kossik89@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
